<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Layout strings -->
    <string name="app_name">Geo Opposite</string>
    <string name="action_settings">Settings</string>
    <string name="my_location">My Location</string>
    <string name="other_location">Other Location</string>
    <string name="location">Location</string>
    <string name="pick">Pick a location:</string>
    <string name="title_activity_other_location">OtherLocationActivity</string>
    <string name="other_location_title">Please enter alternate location</string>
    <string name="antipodal_point">Here is the other side of the Earth</string>
    <string name="city_or_state">City or State</string>
    <string name="same_hemisphere">Stay in same hemisphere?</string>
    <string name="or">OR</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="coordinates">Coordinates (Decimal degrees)</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="enter">Enter</string>

    <!-- Toast strings -->
    <string name="title_action_bar">Please enter alternate location</string>
    <string name="no_loc_entered">No location entered</string>
    <string name="no_coord_entered">No coordinates entered</string>
    <string name="fill_both_fields">Please fill both coordinate fields</string>
    <string name="invalid_input">Invalid input location</string>
    <string name="fetching_data">Fetching location data...</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Action description strings -->
    <string name="action_description">What is this app?</string>
    <string name="description_dialog_title">What is this app?</string>
    <string name="description_dialog_body">"In geography, the <b>antipodes</b> of any place on Earth is the point on the Earth\'s surface which is diametrically opposite to it." -Wikipedia\nThis app shows you the antipodes of the location you enter. Often this just leads to a point in an ocean, so I give the option to stay in the same hemisphere when locating.</string>

</resources>
