<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_blue"
    android:orientation="vertical"
    tools:context="com.sanchez.geoopposite.OtherLocationFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:paddingLeft="12dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/other_location_title"
        android:textColor="@android:color/white"
        android:textSize="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:paddingLeft="12dp"
        android:text="@string/city"
        android:textColor="@android:color/white"
        android:textSize="18dp"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/city_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:text="@string/or"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingLeft="12dp"
        android:text="@string/coordinates"
        android:textColor="@android:color/white"
        android:textSize="18dp"
        style="?android:listSeparatorTextViewStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp">

        <TextView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textSize="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="12dp"
            android:text="@string/latitude"/>

        <EditText
            android:id="@+id/lat_edit_text"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:layout_margin="12dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textSize="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="12dp"
            android:text="@string/longitude"/>

        <EditText
            android:id="@+id/long_edit_text"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:layout_margin="12dp"/>

    </LinearLayout>

</LinearLayout>
